Add non-step page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,10 @@
     <h2 class="govuk-heading-l">You might need specialist support after certain types of crime.</h2>
     <ul class="govuk-list">
       <li>
-        <a class="govuk-link" href="reporting-a-crime">Reporting a crime (click)</a>
+        <a class="govuk-link" href="reporting-a-crime">Reporting a crime</a>
+      </li>
+      <li>
+        <a class="govuk-link" href="young-victims-of-crime">I'm a young victim of crime</a>
       </li>
       <li>
         <a class="govuk-link" href="#">Coronavirus (COVID-19): victim and witness services</a>
@@ -34,9 +37,6 @@
       </li>
       <li>
         <a class="govuk-link" href="#">I'm being stalked or harassed</a>
-      </li>
-      <li>
-        <a class="govuk-link" href="#">I'm a young victim of crime</a>
       </li>
       <li>
         <a class="govuk-link" href="#">I've been sexually assaulted</a>
